<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/portrait_bg"
        tools:context=".Details">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cCardBg"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:background="@color/air_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.335"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAffiliation"
                app:layout_constraintVertical_bias="0.032"
                tools:text="@string/tGender" />

            <ImageView
                android:id="@+id/ivPCharacter"
                android:layout_width="302dp"
                android:layout_height="227dp"
                android:contentDescription="@string/txPCharacter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.199"
                app:srcCompat="@drawable/appa_s_mother" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clName"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:background="@color/air_text_secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPCharacter"
                app:layout_constraintVertical_bias="0.053">

                <TextView
                    android:id="@+id/tvNameCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cinzel"
                    android:gravity="center"
                    android:textColor="@color/air_background"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/tName" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvAffiliation"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.692"
                app:layout_constraintStart_toEndOf="@+id/tvDAff"
                app:layout_constraintTop_toBottomOf="@+id/clName"
                app:layout_constraintVertical_bias="0.033"
                tools:text="@string/affilation" />

            <ImageView
                android:id="@+id/ivWeapon"
                android:layout_width="125dp"
                android:layout_height="77dp"
                android:contentDescription="@string/tivWeapon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.084"
                app:srcCompat="@drawable/air" />

            <TextView
                android:id="@+id/tvProf"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.594"
                app:layout_constraintStart_toEndOf="@+id/tvDProfession"
                app:layout_constraintTop_toBottomOf="@+id/tvGender"
                app:layout_constraintVertical_bias="0.044"
                tools:text="@string/tProfession" />

            <TextView
                android:id="@+id/tvPosition"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/roboto_slab"
                android:paddingBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tvDPosition"
                app:layout_constraintTop_toBottomOf="@+id/tvProf"
                app:layout_constraintVertical_bias="0.059"
                tools:text="@string/tPosition" />

            <TextView
                android:id="@+id/tvDAff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="296dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/affilation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clName"
                app:layout_constraintVertical_bias="0.03" />

            <TextView
                android:id="@+id/tvDGenrer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/tGender"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAffiliation"
                app:layout_constraintVertical_bias="0.003" />

            <TextView
                android:id="@+id/tvDProfession"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/tProfession"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDGenrer"
                app:layout_constraintVertical_bias="0.004" />

            <TextView
                android:id="@+id/tvDPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/tPosition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProf"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>